using networks for nginx proxy

--- a/conf/jenkins-master.env
+++ b/conf/jenkins-master.env
@@ -8,8 +8,7 @@ JAVA_VM_PARAMETERS=-Xmx1024m -Xms512m
 JENKINS_MASTER_EXECUTORS=0
 # Whitespace separated list of required plugins.
 # Example: gitlab-plugin hipchat swarm
-#JENKINS_PLUGINS=swarm git jquery simple-theme-plugin gravatar github unity3d-plugin
-JENKINS_PLUGINS=swarm git unity3d-plugin github envinject log-parser
+JENKINS_PLUGINS=swarm git unity3d-plugin github envinject log-parser simple-theme-plugin gravatar
 # Jenkins port for accepting swarm slave connections
 JENKINS_SLAVEPORT=50000
 # Jenkins startup parameters.
